--- a/newcommands.tex
+++ b/newcommands.tex
@@ -12,3 +12,5 @@
 \newcommand{\Alq}{$\mathrm{Alq}_3$\xspace}
 \newcommand{\dcvt}{DCV2T\xspace}
 
+\newcommand{\suggestion}[1]{{\color{red}SUGGESTION: #1}}
+
