kmc theory; moved conjugated segments to the mapping section

--- a/manual.tex
+++ b/manual.tex
@@ -55,6 +55,8 @@ pdfpagemode=UseNone]{hyperref}
 \include{morphology}
 \include{mapping}
 \include{transfer_integrals}
+\include{energetic_disorder}
+\include{kmc}
 \include{reference}
 
 \bibliographystyle{achemso}
