--- a/newcommands.tex
+++ b/newcommands.tex
@@ -12,5 +12,8 @@
 \newcommand{\Alq}{$\mathrm{Alq}_3$\xspace}
 \newcommand{\dcvt}{DCV2T\xspace}
 
+\newcommand{\xyz}{\texttt{geometry.xyz}\xspace}
+\newcommand{\orb}{\texttt{zindo.orb}\xspace}
+
 \newcommand{\suggestion}[1]{{\color{red}SUGGESTION: #1}}
 
