--- a/reference.tex
+++ b/reference.tex
@@ -1,6 +1,9 @@
-\chapter*{Reference}
-\section*{Calculators}
-\input{ref_calculators}
-\section*{Conjugated segment definitions}
+\chapter{Reference}
+\section{Calculators}
+\input{reference/calculators/all}
+
+\section{Conjugated segment definitions}
 \input{reference/xml/ctp_listcharges.xml}
 
+\section{Programs}
+\input{reference/programs/all}
