--- a/mapping.tex
+++ b/mapping.tex
@@ -28,10 +28,19 @@ Finally, a list of neighboring conjugated segments is constructed. Two segments 
 \begin{verbatim}
   ctp_map --top topology.tpr -c 15 -cg cgmap.xml --trj traj.trr
 \end{verbatim}
-The input are the gromacs topology and trajectory files, a mapping file, a cutoff distance for defining nearest neighbours and a file describing the charge unit types. 
+The input are the gromacs topology and trajectory files, a mapping file, a cutoff distance for defining nearest neighbours and a file describing the charge unit types. The output includes a neighbour list, labelled by the gromacs step number, and a binary 
+file and a state file with the mapped onto conjugated segments system. 
+
+In order to check the mapping one can use \texttt{ctp\_printqmattop} 
+\begin{verbatim}
+  \texttt{ctp_printqmattop} --
+\end{verbatim}
+
+This programme will read in the state from ctp\_map together with a list charge unit description and will create two output trajectory files corresponding to the coarse grained and quantum topologies. The coase grained topology is defined by two vectors per bead. The quantum topology has the coordinates from INPUT\_COORD backmapped onto the coarse grained topology. It is suggested to view all three file (atomistic, coarse grained and quantum) on top of each other to check the mapping before proceding.
+
 
 \subsection{The mapping file}
-To partition the system onto conjugated segments and rigid fragments a mapping \xml file is required. This file is based on the input provided for generation of \texttt{topol.tpr} and \texttt{traj.trr} files. An example of a mapping file for a single \dcvt molecule is shown in listing~\ref{list:map}.
+To partition the system onto conjugated segments and rigid fragments a mapping \xml file is required. This file is based on the input provided for generation of \texttt{topol.tpr} and \texttt{traj.trr} files. An example of a mapping file for a single \dcvt molecule is shown in listing~\ref{list:map}. 
 
 %\begin{table}
 {\small 
@@ -149,3 +158,5 @@ namecrg -> ChargesChargedFile (do we need this here?)
  Note: The first three values are important, since they must correspond to the first three atoms defined in the coarse-grained mapping, which are used to calculate two vectors indicating the orientation of the molecule. The third required vector is the eigenvector of the smallest eigenvalue of the gyration tensor, i.e. perpendicular to the planar core.
  Note: The number of molecules here may differ from that in the coarse-grained mapping, since for example only the core is important for transport and not the side chains, but it has to be the same number of atoms as in the \gaussian input file otherwise overlap integral values will be terribly wrong. 
 \end{tabular}
+
+
