programs reference. help2t2t.sh mus be updated for Application object

--- a/manual.tex
+++ b/manual.tex
@@ -39,6 +39,10 @@ pdfpagemode=UseNone]{hyperref}
 %\usepackage{times}
 \usepackage{type1cm}
 
+\def\bibsection{%
+    \section*{References}%
+}
+
 \begin{document}
 
 \input{newcommands}
