modified title page

--- a/titlepage.tex
+++ b/titlepage.tex
@@ -18,14 +18,15 @@ If you are using this package please site \\
 V. R\"uhle, A. Lukyanov, F. May, M. Schrader, T. Vehoff, J. Kirkpatrick, B. Baumeier, D. Andrienko \\
 ``Microscopic simulations of charge transport in disordered organic semiconductors'' \\
 \htmladdnormallink{\color{black} {\itshape J. Chem. Theor. Comp.} 2011}
-{http://dx.doi.org/} \\
-\vspace*{0.1cm}
-and \\
-\vspace*{0.1cm}
-V. R\"uhle, C. Junghans, A. Lukyanov, K. Kremer, D. Andrienko \\
-``Versatile Object-oriented Toolkit for Coarse-graining Applications'' \\
-\htmladdnormallink{ \color{black} {\itshape J. Chem. Theor. Comp.} 5, 3211, 2009}
-{http://dx.doi.org/10.1021/ct900369w}
+{http://dx.doi.org/} 
+%\\
+%\vspace*{0.1cm}
+%and \\
+%\vspace*{0.1cm}
+%V. R\"uhle, C. Junghans, A. Lukyanov, K. Kremer, D. Andrienko \\
+%``Versatile Object-oriented Toolkit for Coarse-graining Applications'' \\
+%\htmladdnormallink{ \color{black} {\itshape J. Chem. Theor. Comp.} 5, 3211, 2009}
+%{http://dx.doi.org/10.1021/ct900369w}
 }
 
 \vspace*{1.4cm}
