a (failed) attempt to provide a better structure

--- a/kmc.tex
+++ b/kmc.tex
@@ -1,5 +1,5 @@
 \chapter{Solving the master equation}
-\label{sec:me}
+\label{sec:kmc}
 
 Having determined the list of conjugated segments (hopping sites) and charge transfer rates between them, the next task is to solve the master equation which describes the time evolution of the system
 %
