--- a/manual.tex
+++ b/manual.tex
@@ -56,8 +56,8 @@ pdfpagemode=UseNone]{hyperref}
 \cleardoublepage
 \mainmatter
 \include{introduction}
-\include{morphology}
-\include{mapping}
+\include{theory}
+\include{input}
 \include{transfer_integrals}
 \include{energetic_disorder}
 \include{kmc}
