trying to repartition again

--- a/dft.tex
+++ b/dft.tex
@@ -1,4 +1,4 @@
-\section{Density-functional determination of transfer intergals}
+\subsection{Density-functional method}
 \label{sec:dft}
 
 \begin{itemize}
