--- a/reference.tex
+++ b/reference.tex
@@ -1,9 +1,11 @@
 \chapter{Reference}
-\section{Calculators}
-\input{reference/calculators/all}
-
-\section{Conjugated segment definitions}
-\input{reference/xml/ctp_listcharges.xml}
 
 \section{Programs}
 \input{reference/programs/all}
+
+\section{Calculators}
+\input{reference/calculators/all}
+
+\section{XML options}
+\input{reference/xml/ctp_listcharges.xml}
+
