--- a/newcommands.tex
+++ b/newcommands.tex
@@ -14,6 +14,7 @@
 
 \newcommand{\xyz}{\texttt{geometry.xyz}\xspace}
 \newcommand{\orb}{\texttt{zindo.orb}\xspace}
+\newcommand{\votcact}{{\sc votca-ct}\xspace}
 
 \newcommand{\suggestion}[1]{{\color{red}SUGGESTION: #1}}
 
