--- a/input.tex
+++ b/input.tex
@@ -3,8 +3,12 @@
 
 \newcommand{\ctpmap}{\hyperref[prog:ctp_map]{\texttt{ctp\_map}}\xspace}
 \newcommand{\dumptraj}{\hyperref[calc:dumptraj]{\texttt{dumptraj}}\xspace}
+\newcommand{\calculaor}{\hyperref[sec:alculators]{\texttt{calculator}}\xspace}
 
-\section{Single molecule}
+There are several types of input files (all in the \xml format) one has to specify. The most important are files describing atomistic topology, coarse-grained topology, and conjugated segments. In addition, a \calculator can require options 
+
+\section{Atomistic topology}
+\label{sec:atomistic}
 In this section we describe how to specify the morphology of the system. We will use DCV2T as an example.
 
 \begin{wrapfigure}{ht}{0.5\linewidth}
@@ -17,7 +21,7 @@ In this section we describe how to specify the morphology of the system. We will
 %\clearpage
 The structure of DCV2T, together with atom type definitions, is shown in fig.~\ref{fig:dcv2t_at}. DCV2T is a typical donor-acceptor-type molecule, with two electron-donating thiophene and two electron-withdrawing dicyanovinyl groups. The pdb file which contains residue types, residue numbering, atom names, atom types, and atom coordinates is shown below. In its ground state the molecule is practically planar. 
 
-An amorphous morphology was obtained by quenching the 512 DCV2T molecules after equilibrating the system above the glass transition temperature. What we will need is a snapshot out of the trajectory and the topology file describing the system (all in GROMACS format).
+An amorphous morphology was obtained by quenching the 512 DCV2T molecules after equilibrating the system above the glass transition temperature. What we will need is a snapshot out of the trajectory and the topology file describing the system (all in \gromacs format).
 
 %\clearpage
 \lstinputlisting[
@@ -31,21 +35,9 @@ An amorphous morphology was obtained by quenching the 512 DCV2T molecules after 
  caption={pdb file of DCV2T}]%
 {./fig/chemical_structure/dcv2t.pdb}
 
-\section{Conjugated segments}
+\section{Coarse-grained topology}
+\label{sec:coarsegrained}
 
-\ctpmap partitions the system on conjugated segments and rigid fragments:
-\begin{verbatim}
-  ctp_map --top topology.tpr -c 15 -cg cgmap.xml --trj traj.trr
-\end{verbatim}
-The input are the gromacs topology and trajectory files, a mapping file, a cutoff distance for defining nearest neighbours and a file describing the charge unit types. The output includes a neighbour list, labelled by the gromacs step number, and a binary 
-file and a state file with the mapped onto conjugated segments system. 
-
-In order to check the mapping one can use the \dumptraj calculator
-\begin{verbatim}
-  ctp_run --exec  "dumptraj" -cg map.xml 
-\end{verbatim}
-
-This program will read in the state file created by \ctpmap together with a conjugated segment definitions and will create two output trajectory files corresponding to the coarse-grained and back-mapped topologies. The back-maping of the coase-grained topology is performed using stored rigid fragment positions and orientations. It is suggested to view all three trajectories (atomistic, coarse grained, and quantum) on top of each other to check the mapping.
 
 \subsection{The mapping file}
 To partition the system onto conjugated segments and rigid fragments a mapping \xml file is required. This file is based on the input provided for generation of \texttt{topol.tpr} and \texttt{traj.trr} files. An example of a mapping file for a single \dcvt molecule is shown in listing~\ref{list:map}. 
@@ -115,6 +107,22 @@ To partition the system onto conjugated segments and rigid fragments a mapping \
  morekeywords={cg_molecule,cg_beads,name,ident,maps,map,mapping,weights,qm,symmetry},
  caption={Partitioning of DCV2T on conjugates segments and rigid fragments}]%
 {./fig/mapping/cgmap.xml}
+
+
+
+\ctpmap partitions the system on conjugated segments and rigid fragments:
+\begin{verbatim}
+  ctp_map --top topology.tpr -c 15 -cg cgmap.xml --trj traj.trr
+\end{verbatim}
+The input are the gromacs topology and trajectory files, a mapping file, a cutoff distance for defining nearest neighbours and a file describing the charge unit types. The output includes a neighbour list, labelled by the gromacs step number, and a binary 
+file and a state file with the mapped onto conjugated segments system. 
+
+In order to check the mapping one can use the \dumptraj calculator
+\begin{verbatim}
+  ctp_run --exec  "dumptraj" -cg map.xml 
+\end{verbatim}
+
+This program will read in the state file created by \ctpmap together with a conjugated segment definitions and will create two output trajectory files corresponding to the coarse-grained and back-mapped topologies. The back-maping of the coase-grained topology is performed using stored rigid fragment positions and orientations. It is suggested to view all three trajectories (atomistic, coarse grained, and quantum) on top of each other to check the mapping.
 
 \subsection{Conjugated segments}
 
