small bag in latex

--- a/input.tex
+++ b/input.tex
@@ -3,7 +3,7 @@
 
 \newcommand{\ctpmap}{\hyperref[prog:ctp_map]{\texttt{ctp\_map}}\xspace}
 \newcommand{\dumptraj}{\hyperref[calc:dumptraj]{\texttt{dumptraj}}\xspace}
-\newcommand{\calculaor}{\hyperref[sec:alculators]{\texttt{calculator}}\xspace}
+\newcommand{\calculator}{\hyperref[sec:alculators]{\texttt{calculator}}\xspace}
 
 There are several types of input files (all in the \xml format) one has to specify. The most important are files describing atomistic topology, coarse-grained topology, and conjugated segments. In addition, a \calculator can require options 
 
