--- a/newcommands.tex
+++ b/newcommands.tex
@@ -16,5 +16,9 @@
 \newcommand{\orb}{\texttt{zindo.orb}\xspace}
 \newcommand{\votcact}{{\sc votca-ct}\xspace}
 
+\newcommand{\overlap}{\hyperref[prog:moo_overlap]{\texttt{moo\_overlap}}\xspace}
+\newcommand{\ctprun}{\hyperref[prog:ctp_run]{\texttt{ctp\_run}}\xspace}
+
+
 \newcommand{\suggestion}[1]{{\color{red}SUGGESTION: #1}}
 
