--- a/theory.tex
+++ b/theory.tex
@@ -1,15 +1,15 @@
 \chapter{Theoretical background}
 \label{sec:theory}
 
-\input{workflow}
-\input{morphology}
-\input{fragments}
+\input{theory/workflow}
+\input{theory/morphology}
+\input{theory/fragments}
 
 \section{Electronic coupling}
 \label{sec:transfer_integrals}
-\input{moo}
-\input{dft}
+\input{theory/moo}
+\input{theory/dft}
 
-\input{energetic_disorder}
-\input{kmc}
+\input{theory/energetic_disorder}
+\input{theory/kmc}
 
