--- a/input.tex
+++ b/input.tex
@@ -5,7 +5,7 @@
 \newcommand{\dumptraj}{\hyperref[calc:dumptraj]{\texttt{dumptraj}}\xspace}
 \newcommand{\calculator}{\hyperref[sec:alculators]{\texttt{calculator}}\xspace}
 
-There are several types of input files (all in the \xml format) one has to specify. The most important are files describing atomistic topology, coarse-grained topology, and conjugated segments. In addition, a \calculator can require options 
+The \xml input files has to be specify atomistic topology, coarse-grained topology, and conjugated segments. In addition, practically every \calculator requires extra options which are provided in a separate \xml file.
 
 \section{Atomistic topology}
 \label{sec:atomistic}
@@ -25,6 +25,7 @@ An amorphous morphology was obtained by quenching the 512 DCV2T molecules after 
 
 %\clearpage
 \lstinputlisting[
+  language=XML,
   basicstyle=\ttfamily\footnotesize,
   frame=lines,
   identifierstyle=\color{red},
@@ -38,8 +39,6 @@ An amorphous morphology was obtained by quenching the 512 DCV2T molecules after 
 \section{Coarse-grained topology}
 \label{sec:coarsegrained}
 
-
-\subsection{The mapping file}
 To partition the system onto conjugated segments and rigid fragments a mapping \xml file is required. This file is based on the input provided for generation of \texttt{topol.tpr} and \texttt{traj.trr} files. An example of a mapping file for a single \dcvt molecule is shown in listing~\ref{list:map}. 
 
 %\begin{table}
@@ -124,7 +123,7 @@ In order to check the mapping one can use the \dumptraj calculator
 
 This program will read in the state file created by \ctpmap together with a conjugated segment definitions and will create two output trajectory files corresponding to the coarse-grained and back-mapped topologies. The back-maping of the coase-grained topology is performed using stored rigid fragment positions and orientations. It is suggested to view all three trajectories (atomistic, coarse grained, and quantum) on top of each other to check the mapping.
 
-\subsection{Conjugated segments}
+\section{Conjugated segments and rigid fragments}
 
 Conjugated segments are described in a separate \xml file. An example for \dcvt is shown in listing~\ref{list:conjugated_segments}.
 
