--- a/programs/moo.tex
+++ b/programs/moo.tex
@@ -1,6 +1,6 @@
 \newcommand{\integrals}{\hyperref[calc:integrals]{\texttt{integrals}}\xspace}
 
-\subsection{Molecular Orbital Overlap (\moo)}
+\subsection{Molecular Orbital Overlap}
 
 \moo can be used both in a sandalone mode and as a \calculator of the \votcact. \moo constructs the Fock operator of a dimer from the  molecular orbitals of monomers by translating and rotating the orbitals and therefore requires the optimized geometry of the molecule and the projection coefficients of the molecular on atomic orbitals. 
 
