--- a/reference.tex
+++ b/reference.tex
@@ -1,11 +1,14 @@
 \chapter{Manual pages}
 
 \section{Programs}
+\label{ref:programs}
 \input{reference/programs/all}
 
 \section{Calculators}
+\label{ref:caclulators}
 \input{reference/calculators/all}
 
-\section{XML options}
+\section{Options}
+\label{ref:options}
 \input{reference/xml/ctp_listcharges.xml}
 
