--- a/newcommands.tex
+++ b/newcommands.tex
@@ -16,9 +16,16 @@
 \newcommand{\orb}{\texttt{zindo.orb}\xspace}
 \newcommand{\votcact}{{\sc votca-ct}\xspace}
 
+\newcommand{\calculator}{\hyperref[sec:calculators]{\texttt{calculator}}\xspace}
+
 \newcommand{\overlap}{\hyperref[prog:moo_overlap]{\texttt{moo\_overlap}}\xspace}
 \newcommand{\ctprun}{\hyperref[prog:ctp_run]{\texttt{ctp\_run}}\xspace}
+\newcommand{\ctpmap}{\hyperref[prog:ctp_map]{\texttt{ctp\_map}}\xspace}
 
+\newcommand{\estat}{\hyperref[calc:estat]{\texttt{estat}}\xspace}
+\newcommand{\dumptraj}{\hyperref[calc:dumptraj]{\texttt{dumptraj}}\xspace}
+
+\newcommand{\refcalc}{\hyperref[ref:calculators]{calculators}\xspace}
 
 \newcommand{\suggestion}[1]{{\color{red}SUGGESTION: #1}}
 
