better terminal for hyperref

--- a/manual.tex
+++ b/manual.tex
@@ -17,8 +17,12 @@
 %\usepackage{fancyvrb}
 \usepackage{listings}
 
+\definecolor{webgreen}{rgb}{0,.5,0}
+\definecolor{webbrown}{rgb}{.6,0,0}
+\definecolor{invisiblegray}{rgb}{.97,0.97,0.97}
+
 \usepackage
-[hypertex, %or dvips or pdftex
+[ps2pdf, %or dvips or pdftex 
 pagebackref, %or backref
 colorlinks=true,
 linkcolor=webgreen, %defined below
@@ -31,9 +35,6 @@ pdfkeywords={charge transport organic semiconductors},
 bookmarksopen=false,
 pdfpagemode=UseNone]{hyperref}
 
-\definecolor{webgreen}{rgb}{0,.5,0}
-\definecolor{webbrown}{rgb}{.6,0,0}
-\definecolor{invisiblegray}{rgb}{.97,0.97,0.97}
 \pdfcompresslevel=9
 
 \usepackage[T1]{fontenc}
