--- a/programs/calculators.tex
+++ b/programs/calculators.tex
@@ -1,7 +1,7 @@
 \subsection{Calculators}
 \label{sec:calculators}
 
-\ctprun is a wrapper program which is used to run all calculators. The generic syntax is 
+Calculator is a piece code which calculates a specific system properties, such as site energies, transfer integrals, etc. \ctprun is a wrapper program which executes all calculators. The generic syntax is 
 \begin{verbatim}
   ctp_run --exec "calc1, calc2, ..." --opt options.xml
 \end{verbatim}
