--- a/reference/reference.tex
+++ b/reference/reference.tex
@@ -5,7 +5,7 @@
 \input{reference/programs/all}
 
 \section{Calculators}
-\label{ref:caclulators}
+\label{ref:calculators}
 \input{reference/calculators/all}
 
 \section{Options}
