--- a/newcommands.tex
+++ b/newcommands.tex
@@ -14,9 +14,9 @@
 
 \newcommand{\xyz}{\texttt{geometry.xyz}\xspace}
 \newcommand{\orb}{\texttt{zindo.orb}\xspace}
-\newcommand{\votcact}{{\sc votca-ct}\xspace}
+\newcommand{\votcact}{{\MakeUppercase{votca-ct}}\xspace}
 
-\newcommand{\calculator}{\hyperref[sec:calculators]{\texttt{calculator}}\xspace}
+\newcommand{\calculator}{\hyperref[sec:calculators]{calculator}\xspace}
 
 \newcommand{\overlap}{\hyperref[prog:moo_overlap]{\texttt{moo\_overlap}}\xspace}
 \newcommand{\ctprun}{\hyperref[prog:ctp_run]{\texttt{ctp\_run}}\xspace}
