new dcv2t atom type figure

--- a/input/topology_coarsegrained.tex
+++ b/input/topology_coarsegrained.tex
@@ -1,7 +1,7 @@
 \section{Coarse-grained topology}
 \label{sec:coarsegrained}
 
-To partition the system onto conjugated segments and rigid fragments a mapping \xml file is required. This file is based on the input provided for generation of \texttt{topol.tpr} and \texttt{traj.trr} files. An example of a mapping file for a single \dcvt molecule is shown in listing~\ref{list:map}. 
+To partition the system onto conjugated segments and rigid fragments a mapping \xml file is required. An example of a mapping file for a single \dcvt molecule is shown in listing~\ref{list:map}. 
 
 %\begin{table}
 {\small 
